Przeglądanie i rezerwacja pojazdów przez klienta przywrócone z lepszym formularzem