@@ -2,12 +2,16 @@ package carsalapp.service;
 
 import carsalapp.model.Pojazd;
 import carsalapp.repository.PojazdRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -19,8 +23,59 @@ public class PojazdService {
         this.pojazdRepository = pojazdRepository;
     }
 
+    public enum ReservationResult {
+        SUCCESS,
+        VEHICLE_NOT_FOUND,
+        ALREADY_RESERVED,
+        NOT_AVAILABLE
+    }
+
+    public enum CancellationResult {
+        SUCCESS,
+        VEHICLE_NOT_FOUND,
+        NOT_RESERVED,
+        WRONG_USER
+    }
+
     public List<Pojazd> findAll() {
         return pojazdRepository.findByDeletedFalse();
+    }
+
+    public Page<Pojazd> findAllPaginated(Pageable pageable) {
+        return findAllPaginated(null, pageable);
+    }
+
+    public Page<Pojazd> findAllPaginated(String search, Pageable pageable) {
+        List<Pojazd> allPojazdy = pojazdRepository.findByDeletedFalse();
+        
+        List<Pojazd> filtered = allPojazdy;
+        if (search != null && !search.trim().isEmpty()) {
+            String searchLower = search.toLowerCase().trim();
+            filtered = allPojazdy.stream()
+                .filter(p -> 
+                    p.getNrVin().toLowerCase().contains(searchLower) ||
+                    (p.getModel() != null && p.getModel().getNazwaModelu().toLowerCase().contains(searchLower)) ||
+                    (p.getKolor() != null && p.getKolor().toLowerCase().contains(searchLower))
+                )
+                .collect(Collectors.toList());
+        }
+
+        filtered.sort((p1, p2) -> {
+            if (p1.getRokProdukcji() == null && p2.getRokProdukcji() == null) return 0;
+            if (p1.getRokProdukcji() == null) return 1;
+            if (p2.getRokProdukcji() == null) return -1;
+            return p2.getRokProdukcji().compareTo(p1.getRokProdukcji());
+        });
+
+        int start = (int) pageable.getOffset();
+        int end = Math.min((start + pageable.getPageSize()), filtered.size());
+        
+        if (start > filtered.size()) {
+            return new PageImpl<>(List.of(), pageable, filtered.size());
+        }
+
+        List<Pojazd> pageContent = filtered.subList(start, end);
+        return new PageImpl<>(pageContent, pageable, filtered.size());
     }
 
     public Optional<Pojazd> findById(String nrVin) {
@@ -46,14 +101,15 @@ public class PojazdService {
         return pojazdRepository.existsById(nrVin);
     }
 
-    public List<Pojazd> findAvailableForClients(Long modelId,
+    public Page<Pojazd> findAvailableForClients(Long modelId,
                                                 Long salonId,
                                                 Integer minRok,
                                                 Integer maxRok,
                                                 BigDecimal minCena,
                                                 BigDecimal maxCena,
-                                                String stan) {
-        return pojazdRepository.findByDeletedFalse().stream()
+                                                String stan,
+                                                Pageable pageable) {
+        List<Pojazd> filtered = pojazdRepository.findByDeletedFalse().stream()
             .filter(p -> "Dostepny".equals(p.getStatus()) || "Rezerwacja".equals(p.getStatus()))
             .filter(p -> modelId == null || modelId.equals(p.getIdModelu()))
             .filter(p -> salonId == null || salonId.equals(p.getNrSalonu()))
@@ -62,34 +118,74 @@ public class PojazdService {
             .filter(p -> minCena == null || (p.getCenaKatalogowa() != null && p.getCenaKatalogowa().compareTo(minCena) >= 0))
             .filter(p -> maxCena == null || (p.getCenaKatalogowa() != null && p.getCenaKatalogowa().compareTo(maxCena) <= 0))
             .filter(p -> stan == null || stan.isBlank() || stan.equalsIgnoreCase(p.getStan()))
-            .toList();
+            .sorted((p1, p2) -> {
+                if (p1.getCenaKatalogowa() == null && p2.getCenaKatalogowa() == null) return 0;
+                if (p1.getCenaKatalogowa() == null) return 1;
+                if (p2.getCenaKatalogowa() == null) return -1;
+                return p1.getCenaKatalogowa().compareTo(p2.getCenaKatalogowa());
+            })
+            .collect(Collectors.toList());
+
+        int start = (int) pageable.getOffset();
+        int end = Math.min((start + pageable.getPageSize()), filtered.size());
+        
+        if (start > filtered.size()) {
+            return new PageImpl<>(List.of(), pageable, filtered.size());
+        }
+
+        List<Pojazd> pageContent = filtered.subList(start, end);
+        return new PageImpl<>(pageContent, pageable, filtered.size());
     }
 
-    public boolean reserveIfAvailable(String nrVin, Long klientId) {
+    public ReservationResult reserveIfAvailable(String nrVin, Long klientId) {
         Optional<Pojazd> pojazdOpt = findById(nrVin);
-        if (pojazdOpt.isPresent() && klientId != null) {
-            Pojazd pojazd = pojazdOpt.get();
-            if ("Dostepny".equals(pojazd.getStatus())) {
-                pojazd.setStatus("Rezerwacja");
-                pojazd.setNrKlientaRezerwujacego(klientId);
-                pojazdRepository.save(pojazd);
-                return true;
-            }
+        
+        if (pojazdOpt.isEmpty()) {
+            return ReservationResult.VEHICLE_NOT_FOUND;
         }
-        return false;
+        
+        if (klientId == null) {
+            return ReservationResult.NOT_AVAILABLE;
+        }
+
+        Pojazd pojazd = pojazdOpt.get();
+        
+        if ("Dostepny".equals(pojazd.getStatus())) {
+            pojazd.setStatus("Rezerwacja");
+            pojazd.setNrKlientaRezerwujacego(klientId);
+            pojazdRepository.save(pojazd);
+            return ReservationResult.SUCCESS;
+        } else if ("Rezerwacja".equals(pojazd.getStatus())) {
+            return ReservationResult.ALREADY_RESERVED;
+        } else {
+            return ReservationResult.NOT_AVAILABLE;
+        }
     }
 
-    public boolean cancelReservation(String nrVin, Long klientId) {
+    public CancellationResult cancelReservation(String nrVin, Long klientId) {
         Optional<Pojazd> pojazdOpt = findById(nrVin);
-        if (pojazdOpt.isPresent() && klientId != null) {
-            Pojazd pojazd = pojazdOpt.get();
-            if ("Rezerwacja".equals(pojazd.getStatus()) && klientId.equals(pojazd.getNrKlientaRezerwujacego())) {
-                pojazd.setStatus("Dostepny");
-                pojazd.setNrKlientaRezerwujacego(null);
-                pojazdRepository.save(pojazd);
-                return true;
-            }
+        
+        if (pojazdOpt.isEmpty()) {
+            return CancellationResult.VEHICLE_NOT_FOUND;
         }
-        return false;
+        
+        if (klientId == null) {
+            return CancellationResult.WRONG_USER;
+        }
+
+        Pojazd pojazd = pojazdOpt.get();
+        
+        if (!"Rezerwacja".equals(pojazd.getStatus())) {
+            return CancellationResult.NOT_RESERVED;
+        }
+        
+        if (!klientId.equals(pojazd.getNrKlientaRezerwujacego())) {
+            return CancellationResult.WRONG_USER;
+        }
+
+        pojazd.setStatus("Dostepny");
+        pojazd.setNrKlientaRezerwujacego(null);
+        pojazdRepository.save(pojazd);
+        return CancellationResult.SUCCESS;
     }
 }
